test/files/neg/macro-argtype-mismatch/Test_2.scala
object Test extends App {
  import Macros._
  foo("2")
}